fix h1, h2, img jumbotron mobile, tablet

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
 * {
     box-sizing: border-box;
     padding: 0;
-    margin: 0;
-    
+    margin: 0; 
 }
 
 
@@ -40,9 +39,10 @@ hr {
 
 h1 {
     font-size: 55px;
-    margin: 0;
-    color: white;
+    margin: 15px;
+    
     text-transform: uppercase;
+    color: white;
 }
 
 h2 {
@@ -52,8 +52,6 @@ h2 {
 img {
     width: 100%;
 }
-
-
 
 /* form */
 form {
@@ -77,7 +75,6 @@ button {
     background-color:#1abc9c;
     border: 1px solid white;
     color: white;
-   
 }
 
 #button_hover:hover {
@@ -123,7 +120,6 @@ textarea:focus {
     background-color: #159a80;
 }
 
-
 /* list style - link style */
 .list-style {
     vertical-align: middle;
@@ -154,7 +150,6 @@ textarea:focus {
 }
 
 /* line-star-line-style */
-
 .fa-star {
     vertical-align: middle;
     font-size: 28px;
@@ -196,11 +191,6 @@ textarea:focus {
     background-color:#1abc9c ;
 }
 
-#jumbotron  > h2 {
-    font-size: 25px;
-
-}
-
 #jumbotron-img {
     margin-top: 35px;
     width: 20%;
@@ -210,10 +200,11 @@ textarea:focus {
     display: inline-block;
     text-transform: uppercase;
     font-weight: 400;
+    font-size: 25px;
     color: white;
 }
-/* main */
 
+/* main */
 #section-1 {
     padding-bottom: 50px;
 }
@@ -225,7 +216,6 @@ textarea:focus {
     border-radius: 10px;
     margin: 15px 0;
     overflow: hidden;
-
     background-color: rgba(26, 188, 156, 0.9);  
 }
 
@@ -240,7 +230,6 @@ textarea:focus {
 }
 
 .plus {
-    
     position: absolute;
     display: none;
     top: 50%;
@@ -249,11 +238,6 @@ textarea:focus {
     font-size: 80px;
     color: white;
 }
-
-
-
-
-
 
 #section-2 {
     padding-top: 35px;
@@ -314,8 +298,8 @@ footer {
     color: #3a546d ;
     background-color: white;
 }
-/* /social-footer-style-hover */
 
+/* /social-footer-style-hover */
 footer .paragraph {
     text-align: center;
 }
@@ -336,11 +320,6 @@ footer a {
     color: #1aba9b;
     text-decoration: none;
 }
-
-
-
-
-
 
 /* mobile */
 @media screen and (max-width:767px) {
@@ -372,19 +351,19 @@ footer a {
     }
 
     /* li start bootstrap */
-    .header-top li{
+    .header-top li {
         font-size: 16px;
     }
     /* /li start bootstrap */
     
     /* jumbotron*/
-    .jumbotron_ > h1 {
-        font-size: 35px;
+    #jumbotron > h1 {
+        font-size: 40px;
     
     }
 
-    .jumbotron_ > h2 {
-        font-size: 18px;
+    #jumbotron > h2 {
+        font-size: 20px;
     
     }
 
@@ -405,25 +384,26 @@ footer a {
 
     .h3-footer {
         margin-top: 40px;
-    }
-
-    
+    } 
 }
 
 /* h2-jumbotron fix mobile */
 @media screen and (max-width:440px) {
-
-    .jumbotron_ > h2{
-        font-size: 12px;
-    }   
+    #jumbotron > h2 {
+        font-size: 14px;
+    }
 }
-
 
 /* tablet */
 @media screen and (min-width:768px) and (max-width:1200px) {
 
+    #jumbotron > h1 {
+        font-size: 40px;
+    
+    }
+
     #jumbotron-img{
-        width: 25%;
+        width: 30%;
     }
 
     /* social */
